--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,25 @@
 <resources>
     <string name="app_name">Rubric</string>
     <string name="action_settings">Settings</string>
-    <string name="action_refesh">Refresh</string>
-    <string name="action_refresh1">Settings</string>
-    <!--<string name="action_refresh" translatable="false">Refresh</string>-->
+    <string name="action_refresh">Refresh</string>
+    <string name="title_activity_detail">Details</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- TEMPORARY STRINGS FOR SETTINGS -->
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key" translatable="false">location</string>
+    <string name="pref_location_default" translatable="false">94043</string>
+
+    <string name="pref_criteria_label_popular">Popular</string>
+    <string name="pref_criteria_label_top_rated">Top Rated</string>
+
+    <string name="pref_criteria_popular">popular</string>
+    <string name="pref_criterial_top_rated">top_rated</string>
+
+    <string name="pref_criteria_label">Movies Selection Criteria</string>
+    <string name="pref_criteria_key">movies_criteria</string>
+
+    <string name="pref_criteria_title">Movie Criteria</string>
+    <string name="pref_criteria_default">popular</string>
+
 </resources>
